2010-06-10  Jan Beulich  <jbeulich@novell.com>

	* configure.ac: Replace $() with ${} when intending to expand
	variables rather than invoking commands.
	* configure: Re-generate.

2010-06-09  Dave Korn  <dave.korn.cygwin@gmail.com>

	* opts-common.c (prune_options): Ensure replacement argv array
	is correctly terminated by a NULL entry.

2010-06-09  Iain Sandoe  <iains@gcc.gnu.org>

	Backport from mainline:
	2010-04-28  Mike Stump  <mikestump@comcast.net>
	* config/i386/darwin.h (CC1_SPEC): Ignore -mdynamic-no-pic for
	now.

2010-06-09  Iain Sandoe  <iains@gcc.gnu.org>

	Backport from mainline:
	2010-05-28  Iain Sandoe  <iains@gcc.gnu.org>
        * config.gcc (*-*-darwin*): Adjust t-make fragments for Darwin.

2010-06-09  Edmar Wienskoski  <edmar@freescale.com>

	PR target/44067
	* config/rs6000/rs6000.md (DIFD): Do not split dpfp values for
	e500v2 target.

2010-06-08  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*movsi_1) <TYPE_LEA>: Use %a modifier
	to output operand 1.
	(ashift_zext lea splitter): Use DImode for multiplication.

	* config/i386/i386.c (ix86_expand_epilogue): Do not use ix86_gen_add
	to generate addition.

2010-06-07  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/sourcebuild.texi (Effective-Target Keywords, Other
	attributes): Document gas.

2010-06-07  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2010-06-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac (gcc_cv_ld_sol2_emulation): Test for GNU ld *_sol2
	linker emulations.
	* configure: Regenerate.
	* config.in: Regenerate.

	* config/i386/sol2-10.h [TARGET_GNU_LD] (I386_EMULATION): Define.
	(X86_64_EMULATION): Define.
	(TARGET_LD_EMULATION): Use them.

	* config/sparc/sol2-gld-bi.h (SPARC32_EMULATION): Define.
	(SPARC64_EMULATION): Define.
	(LINK_ARCH_SPEC): Use them.

2010-06-07  Kai Tietz  <kai.tietz@onevision.com>

	Backport from mainline:
	* config/i386.c (ix86_output_addr_vec_elt): Make LPREFIX
	argument for fprintf.